erDiagram

    USER_POINT ||--o{ POINT_HISTORY : has
    USER_POINT ||--o{ ORDER : places
    USER_POINT ||--o{ COUPON : owns

    PRODUCT ||--o{ ORDER_ITEM : contains
    ORDER ||--o{ ORDER_ITEM : includes
    ORDER ||--|| ORDER_PAYMENT : has

    COUPON_POLICY ||--o{ COUPON : defines

    USER_POINT {
        bigint point_id PK
        bigint user_id FK
        bigint point_amount
        TIMESTAMP created_at
        TIMESTAMP updated_at
    }

    PRODUCT {
        bigint product_id PK
        varchar name
        bigint price
        bigint total_stock
        bigint current_stock
        TIMESTAMP created_at
        TIMESTAMP updated_at
    }

    ORDER {
        bigint order_id PK
        bigint user_id FK
        varchar status "CREATED | SUCCESS | CANCELED"
        TIMESTAMP created_at
        TIMESTAMP updated_at
    }

%%  ORDER_ITEM(order_id)
    ORDER_ITEM {
        bigint order_item_id PK
        bigint order_id FK
        bigint product_id FK
        bigint price
        bigint quantity
        TIMESTAMP created_at
        TIMESTAMP updated_at
    }

%%  ORDER_PAYMENT(order_id)
    ORDER_PAYMENT {
        bigint order_payment_id PK
        bigint order_id FK
        bigint coupon_id FK
        bigint discount_amount
        bigint total_amount
        TIMESTAMP created_at
        TIMESTAMP updated_at
    }

    COUPON_POLICY {
        bigint coupon_policy_id PK
        bigint discount_amount
        bigint total_quantity
        bigint remaining_quantity
        TIMESTAMP expired_at
        TIMESTAMP created_at
        TIMESTAMP updated_at
    }

%%  COUPON (coupon_policy_id)
%%  COUPON (user_id)
    COUPON {
        bigint coupon_id PK
        bigint user_id FK
        bigint coupon_policy_id FK
        TIMESTAMP issued_at
        varchar status "ISSUED | USED | EXPIRED"
        TIMESTAMP created_at
        TIMESTAMP updated_at
    }
